k8s/mediaserver/_homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer-service
  namespace: mediaserver
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.100.232
spec:
  type: LoadBalancer
  selector:
    app: homer
  ports:
    - port: 80
      targetPort: 8080
