k8s/mediaserver/_homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  namespace: mediaserver
spec:
  rules:
    - host: "homer.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: homer-service
                port:
                  number: 80
